ansible-k8s-demo/k8s/deployment-app2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
  namespace: demo
  labels:
    app: app2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
      - name: app2
        image: app2:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8081
          name: http
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "200m"
