ansible-k8s-demo/k8s/service-app1.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1
  namespace: demo
  labels:
    app: app1
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30080
    protocol: TCP
    name: http
  selector:
    app: app1
