ansible-k8s-demo/k8s/service-app2.yaml
apiVersion: v1
kind: Service
metadata:
  name: app2
  namespace: demo
  labels:
    app: app2
spec:
  type: NodePort
  ports:
  - port: 8081
    targetPort: 8081
    nodePort: 30081
    protocol: TCP
    name: http
  selector:
    app: app2
